[FEAT] - add aws sns congig

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sns -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sns</artifactId>
+			<version>2.33.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
